# wc-guest-management.api/src/routes.ts
@@ -121,8 +121,9 @@ export function RegisterRoutes(app: express.Express) {
     app.get('/api/guest',
         function(request: any, response: any, next: any) {
             const args = {
-                byVisitDate: { "in": "query", "name": "byVisitDate", "dataType": "datetime" },
-                byCriteria: { "in": "query", "name": "byCriteria", "dataType": "string" },
+                fromDate: { "in": "query", "name": "fromDate", "dataType": "datetime" },
+                toDate: { "in": "query", "name": "toDate", "dataType": "datetime" },
+                criteria: { "in": "query", "name": "criteria", "dataType": "string" },
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
